Minor formatting edits to notebook

--- a/notebooks/hongyu.ipynb
+++ b/notebooks/hongyu.ipynb
@@ -96,21 +96,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ERROR: Cell magic `%%notes` not found.\n"
+      "\n"
      ]
     }
    ],
    "source": [
-    "%%notes\n",
+    "\"\"\"\n",
     "A rule list from the latest sbrl R pkg :\n",
     "\n",
     "    sbrl_model <- sbrl(data, iters=20000, pos_sign=\"1\", neg_sign=\"0\", rule_minlen=1, rule_maxlen=2, minsupport_pos=0.10, minsupport_neg=0.10, lambda=20.0, eta=1.0, nchain=25)\n",
@@ -142,7 +142,10 @@
     "    else  (default rule)  then positive probability = 0.94477711\n",
     "\n",
     "Elaine seems to have a slightly different rule list, without a rule for `{occupation=Adm-clerical,sex=Female}`,\n",
-    "so we stop there.\n"
+    "so we stop there.\n",
+    "\n",
+    "\"\"\"\n",
+    "print"
    ]
   },
   {
@@ -196,21 +199,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR: Cell magic `%%notes` not found.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'\\nThere is another example rule list in our earlier paper http://arxiv.org/pdf/1602.08610v1.pdf on page 3:\\n\\n    if capital-gain>$7298.00 then probability to make over 50K = 0.986 \\n    else if Young,Never-married, then probability to make over 50K = 0.003 \\n    else if Grad-school,Married, then probability to make over 50K = 0.748 \\n    else if Young,capital-loss=0, then probability to make over 50K = 0.072 \\n    else if Own-child,Never-married, then probability to make over 50K = 0.015 \\n    else if Bachelors,Married, then probability to make over 50K = 0.655 \\n    else if Bachelors,Over-time, then probability to make over 50K = 0.255 \\n    else if Exec-managerial,Married, then probability to make over 50K = 0.531 \\n    else if Married,HS-grad, then probability to make over 50K = 0.300 \\n    else if Grad-school, then probability to make over 50K = 0.266 \\n    else if Some-college,Married, then probability to make over 50K = 0.410 \\n    else if Prof-specialty,Married, then probability to make over 50K = 0.713 \\n    else if Assoc-degree,Married, then probability to make over 50K = 0.420 \\n    else if Part-time, then probability to make over 50K = 0.013 \\n    else if Husband, then probability to make over 50K = 0.126 \\n    else if Prof-specialty, then probability to make over 50K = 0.148 \\n    else if Exec-managerial,Male, then probability to make over 50K = 0.193 \\n    else if Full-time,Private, then probability to make over 50K = 0.026 \\n    else (default rule) then probability to make over 50K = 0.066\\n'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%notes\n",
+    "\"\"\"\n",
     "There is another example rule list in our earlier paper http://arxiv.org/pdf/1602.08610v1.pdf on page 3:\n",
     "\n",
     "    if capital-gain>$7298.00 then probability to make over 50K = 0.986 \n",
@@ -232,7 +238,8 @@
     "    else if Exec-managerial,Male, then probability to make over 50K = 0.193 \n",
     "    else if Full-time,Private, then probability to make over 50K = 0.026 \n",
     "    else (default rule) then probability to make over 50K = 0.066\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "print"
    ]
   },
   {
