--- a/notebooks/hongyu.ipynb
+++ b/notebooks/hongyu.ipynb
@@ -165,28 +165,28 @@
     "\n",
     "The rules list is : \n",
     "\n",
-    "    If      {capital.gain=7298LessThancapital-gain} (rule[46]) then positive probability = 0.01617922\n",
-    "    else if {education=Grad-school,marital.status=Married} (rule[76]) then positive probability = 0.24616368\n",
-    "    else if {age=Young,marital.status=Never-married} (rule[36]) then positive probability = 0.99606078\n",
-    "    else if {age=Young,capital.loss=capital-lossEQ0} (rule[34]) then positive probability = 0.92338388\n",
-    "    else if {education=Bachelors,marital.status=Married} (rule[68]) then positive probability = 0.33762434\n",
-    "    else if {marital.status=Married,occupation=Exec-managerial} (rule[123]) then positive probability = 0.46758105\n",
-    "    else if {education=HS-grad,marital.status=Married} (rule[85]) then positive probability = 0.70224325\n",
-    "    else if {education=Some-college,marital.status=Married} (rule[98]) then positive probability = 0.58744545\n",
-    "    else if {relationship=Own-child,hours.per.week=Full-time} (rule[224]) then positive probability = 0.98528471\n",
-    "    else if {marital.status=Married,occupation=Prof-specialty} (rule[124]) then positive probability = 0.27289720\n",
-    "    else if {education=Assoc-degree,marital.status=Married} (rule[59]) then positive probability = 0.57581069\n",
-    "    else if {capital.loss=capital-lossEQ0,hours.per.week=Part-time} (rule[55]) then positive probability = 0.98307380\n",
-    "    else if {occupation=Other-service,capital.loss=capital-lossEQ0} (rule[172]) then positive probability = 0.97980381\n",
-    "    else if {occupation=Prof-specialty,sex=Male} (rule[183]) then positive probability = 0.73821990\n",
-    "    else if {occupation=Adm-clerical,sex=Female} (rule[154]) then positive probability = 0.98090186\n",
-    "    else if {occupation=Prof-specialty} (rule[184]) then positive probability = 0.86271186\n",
-    "    else if {age=Middle-aged,education=HS-grad} (rule[4]) then positive probability = 0.96911197\n",
-    "    else if {education=Grad-school} (rule[81]) then positive probability = 0.61656442\n",
-    "    else if {age=Middle-aged,hours.per.week=Full-time} (rule[6]) then positive probability = 0.94713161\n",
-    "    else if {education=Bachelors,native.country=N-America} (rule[69]) then positive probability = 0.73352034\n",
-    "    else if {sex=Male,native.country=N-America} (rule[244]) then positive probability = 0.86269540\n",
-    "    else  (default rule)  then positive probability = 0.94477711\n",
+    "    If      {capital.gain=7298LessThancapital-gain} (rule[46]) then pos prob = 0.01617922\n",
+    "    else if {education=Grad-school,marital.status=Married} (rule[76]) then pos prob = 0.24616368\n",
+    "    else if {age=Young,marital.status=Never-married} (rule[36]) then pos prob = 0.99606078\n",
+    "    else if {age=Young,capital.loss=capital-lossEQ0} (rule[34]) then pos prob = 0.92338388\n",
+    "    else if {education=Bachelors,marital.status=Married} (rule[68]) then pos prob = 0.33762434\n",
+    "    else if {marital.status=Married,occupation=Exec-managerial} (rule[123]) then pos prob = 0.46758105\n",
+    "    else if {education=HS-grad,marital.status=Married} (rule[85]) then pos prob = 0.70224325\n",
+    "    else if {education=Some-college,marital.status=Married} (rule[98]) then pos prob = 0.58744545\n",
+    "    else if {relationship=Own-child,hours.per.week=Full-time} (rule[224]) then pos prob = 0.98528471\n",
+    "    else if {marital.status=Married,occupation=Prof-specialty} (rule[124]) then pos prob = 0.27289720\n",
+    "    else if {education=Assoc-degree,marital.status=Married} (rule[59]) then pos prob = 0.57581069\n",
+    "    else if {capital.loss=capital-lossEQ0,hours.per.week=Part-time} (rule[55]) then pos prob = 0.98307380\n",
+    "    else if {occupation=Other-service,capital.loss=capital-lossEQ0} (rule[172]) then pos prob = 0.97980381\n",
+    "    else if {occupation=Prof-specialty,sex=Male} (rule[183]) then pos prob = 0.73821990\n",
+    "    else if {occupation=Adm-clerical,sex=Female} (rule[154]) then pos prob = 0.98090186\n",
+    "    else if {occupation=Prof-specialty} (rule[184]) then pos prob = 0.86271186\n",
+    "    else if {age=Middle-aged,education=HS-grad} (rule[4]) then pos prob = 0.96911197\n",
+    "    else if {education=Grad-school} (rule[81]) then pos prob = 0.61656442\n",
+    "    else if {age=Middle-aged,hours.per.week=Full-time} (rule[6]) then pos prob = 0.94713161\n",
+    "    else if {education=Bachelors,native.country=N-America} (rule[69]) then pos prob = 0.73352034\n",
+    "    else if {sex=Male,native.country=N-America} (rule[244]) then pos prob = 0.86269540\n",
+    "    else  (default rule)  then pos prob = 0.94477711\n",
     "\n",
     "Elaine seems to have a slightly different rule list, without a rule for `{occupation=Adm-clerical,sex=Female}`,\n",
     "so we stop there.\n",
