--- a/notebooks/hongyu.ipynb
+++ b/notebooks/hongyu.ipynb
@@ -166,26 +166,26 @@
     "The rules list is : \n",
     "\n",
     "    If      {capital.gain=7298LessThancapital-gain} (rule[46]) then pos prob = 0.01617922\n",
-    "    else if {education=Grad-school,marital.status=Married} (rule[76]) then pos prob = 0.24616368\n",
-    "    else if {age=Young,marital.status=Never-married} (rule[36]) then pos prob = 0.99606078\n",
-    "    else if {age=Young,capital.loss=capital-lossEQ0} (rule[34]) then pos prob = 0.92338388\n",
-    "    else if {education=Bachelors,marital.status=Married} (rule[68]) then pos prob = 0.33762434\n",
-    "    else if {marital.status=Married,occupation=Exec-managerial} (rule[123]) then pos prob = 0.46758105\n",
-    "    else if {education=HS-grad,marital.status=Married} (rule[85]) then pos prob = 0.70224325\n",
-    "    else if {education=Some-college,marital.status=Married} (rule[98]) then pos prob = 0.58744545\n",
-    "    else if {relationship=Own-child,hours.per.week=Full-time} (rule[224]) then pos prob = 0.98528471\n",
-    "    else if {marital.status=Married,occupation=Prof-specialty} (rule[124]) then pos prob = 0.27289720\n",
-    "    else if {education=Assoc-degree,marital.status=Married} (rule[59]) then pos prob = 0.57581069\n",
-    "    else if {capital.loss=capital-lossEQ0,hours.per.week=Part-time} (rule[55]) then pos prob = 0.98307380\n",
-    "    else if {occupation=Other-service,capital.loss=capital-lossEQ0} (rule[172]) then pos prob = 0.97980381\n",
-    "    else if {occupation=Prof-specialty,sex=Male} (rule[183]) then pos prob = 0.73821990\n",
-    "    else if {occupation=Adm-clerical,sex=Female} (rule[154]) then pos prob = 0.98090186\n",
-    "    else if {occupation=Prof-specialty} (rule[184]) then pos prob = 0.86271186\n",
-    "    else if {age=Middle-aged,education=HS-grad} (rule[4]) then pos prob = 0.96911197\n",
-    "    else if {education=Grad-school} (rule[81]) then pos prob = 0.61656442\n",
-    "    else if {age=Middle-aged,hours.per.week=Full-time} (rule[6]) then pos prob = 0.94713161\n",
-    "    else if {education=Bachelors,native.country=N-America} (rule[69]) then pos prob = 0.73352034\n",
-    "    else if {sex=Male,native.country=N-America} (rule[244]) then pos prob = 0.86269540\n",
+    "    elif {education=Grad-school,marital.status=Married} (rule[76]) then pos prob = 0.24616368\n",
+    "    elif {age=Young,marital.status=Never-married} (rule[36]) then pos prob = 0.99606078\n",
+    "    elif {age=Young,capital.loss=capital-lossEQ0} (rule[34]) then pos prob = 0.92338388\n",
+    "    elif {education=Bachelors,marital.status=Married} (rule[68]) then pos prob = 0.33762434\n",
+    "    elif {marital.status=Married,occupation=Exec-managerial} (rule[123]) then pos prob = 0.46758105\n",
+    "    elif {education=HS-grad,marital.status=Married} (rule[85]) then pos prob = 0.70224325\n",
+    "    elif {education=Some-college,marital.status=Married} (rule[98]) then pos prob = 0.58744545\n",
+    "    elif {relationship=Own-child,hours.per.week=Full-time} (rule[224]) then pos prob = 0.98528471\n",
+    "    elif {marital.status=Married,occupation=Prof-specialty} (rule[124]) then pos prob = 0.27289720\n",
+    "    elif {education=Assoc-degree,marital.status=Married} (rule[59]) then pos prob = 0.57581069\n",
+    "    elif {capital.loss=capital-lossEQ0,hours.per.week=Part-time} (rule[55]) then pos prob = 0.98307380\n",
+    "    elif {occupation=Other-service,capital.loss=capital-lossEQ0} (rule[172]) then pos prob = 0.97980381\n",
+    "    elif {occupation=Prof-specialty,sex=Male} (rule[183]) then pos prob = 0.73821990\n",
+    "    elif {occupation=Adm-clerical,sex=Female} (rule[154]) then pos prob = 0.98090186\n",
+    "    elif {occupation=Prof-specialty} (rule[184]) then pos prob = 0.86271186\n",
+    "    elif {age=Middle-aged,education=HS-grad} (rule[4]) then pos prob = 0.96911197\n",
+    "    elif {education=Grad-school} (rule[81]) then pos prob = 0.61656442\n",
+    "    elif {age=Middle-aged,hours.per.week=Full-time} (rule[6]) then pos prob = 0.94713161\n",
+    "    elif {education=Bachelors,native.country=N-America} (rule[69]) then pos prob = 0.73352034\n",
+    "    elif {sex=Male,native.country=N-America} (rule[244]) then pos prob = 0.86269540\n",
     "    else  (default rule)  then pos prob = 0.94477711\n",
     "\n",
     "Elaine seems to have a slightly different rule list, without a rule for `{occupation=Adm-clerical,sex=Female}`,\n",
@@ -295,23 +295,23 @@
     "There is another example rule list in our earlier paper http://arxiv.org/pdf/1602.08610v1.pdf on page 3:\n",
     "\n",
     "    if capital-gain>$7298.00 then probability to make over 50K = 0.986 \n",
-    "    else if Young,Never-married, then probability to make over 50K = 0.003 \n",
-    "    else if Grad-school,Married, then probability to make over 50K = 0.748 \n",
-    "    else if Young,capital-loss=0, then probability to make over 50K = 0.072 \n",
-    "    else if Own-child,Never-married, then probability to make over 50K = 0.015 \n",
-    "    else if Bachelors,Married, then probability to make over 50K = 0.655 \n",
-    "    else if Bachelors,Over-time, then probability to make over 50K = 0.255 \n",
-    "    else if Exec-managerial,Married, then probability to make over 50K = 0.531 \n",
-    "    else if Married,HS-grad, then probability to make over 50K = 0.300 \n",
-    "    else if Grad-school, then probability to make over 50K = 0.266 \n",
-    "    else if Some-college,Married, then probability to make over 50K = 0.410 \n",
-    "    else if Prof-specialty,Married, then probability to make over 50K = 0.713 \n",
-    "    else if Assoc-degree,Married, then probability to make over 50K = 0.420 \n",
-    "    else if Part-time, then probability to make over 50K = 0.013 \n",
-    "    else if Husband, then probability to make over 50K = 0.126 \n",
-    "    else if Prof-specialty, then probability to make over 50K = 0.148 \n",
-    "    else if Exec-managerial,Male, then probability to make over 50K = 0.193 \n",
-    "    else if Full-time,Private, then probability to make over 50K = 0.026 \n",
+    "    elif Young,Never-married, then probability to make over 50K = 0.003 \n",
+    "    elif Grad-school,Married, then probability to make over 50K = 0.748 \n",
+    "    elif Young,capital-loss=0, then probability to make over 50K = 0.072 \n",
+    "    elif Own-child,Never-married, then probability to make over 50K = 0.015 \n",
+    "    elif Bachelors,Married, then probability to make over 50K = 0.655 \n",
+    "    elif Bachelors,Over-time, then probability to make over 50K = 0.255 \n",
+    "    elif Exec-managerial,Married, then probability to make over 50K = 0.531 \n",
+    "    elif Married,HS-grad, then probability to make over 50K = 0.300 \n",
+    "    elif Grad-school, then probability to make over 50K = 0.266 \n",
+    "    elif Some-college,Married, then probability to make over 50K = 0.410 \n",
+    "    elif Prof-specialty,Married, then probability to make over 50K = 0.713 \n",
+    "    elif Assoc-degree,Married, then probability to make over 50K = 0.420 \n",
+    "    elif Part-time, then probability to make over 50K = 0.013 \n",
+    "    elif Husband, then probability to make over 50K = 0.126 \n",
+    "    elif Prof-specialty, then probability to make over 50K = 0.148 \n",
+    "    elif Exec-managerial,Male, then probability to make over 50K = 0.193 \n",
+    "    elif Full-time,Private, then probability to make over 50K = 0.026 \n",
     "    else (default rule) then probability to make over 50K = 0.066\n",
     "\n",
     "\"\"\"\n",
