--- a/notebooks/hongyu.ipynb
+++ b/notebooks/hongyu.ipynb
@@ -165,27 +165,27 @@
     "\n",
     "The rules list is : \n",
     "\n",
-    "    If      {capital.gain=7298LessThancapital-gain} ([46]) then pos prob = 0.01617922\n",
-    "    elif {education=Grad-school,marital.status=Married} ([76]) then pos prob = 0.24616368\n",
-    "    elif {age=Young,marital.status=Never-married} ([36]) then pos prob = 0.99606078\n",
-    "    elif {age=Young,capital.loss=capital-lossEQ0} ([34]) then pos prob = 0.92338388\n",
-    "    elif {education=Bachelors,marital.status=Married} ([68]) then pos prob = 0.33762434\n",
-    "    elif {marital.status=Married,occupation=Exec-managerial} ([123]) then pos prob = 0.46758105\n",
-    "    elif {education=HS-grad,marital.status=Married} ([85]) then pos prob = 0.70224325\n",
-    "    elif {education=Some-college,marital.status=Married} ([98]) then pos prob = 0.58744545\n",
-    "    elif {relationship=Own-child,hours.per.week=Full-time} ([224]) then pos prob = 0.98528471\n",
-    "    elif {marital.status=Married,occupation=Prof-specialty} ([124]) then pos prob = 0.27289720\n",
-    "    elif {education=Assoc-degree,marital.status=Married} ([59]) then pos prob = 0.57581069\n",
-    "    elif {capital.loss=capital-lossEQ0,hours.per.week=Part-time} ([55]) then pos prob = 0.98307380\n",
-    "    elif {occupation=Other-service,capital.loss=capital-lossEQ0} ([172]) then pos prob = 0.97980381\n",
-    "    elif {occupation=Prof-specialty,sex=Male} ([183]) then pos prob = 0.73821990\n",
-    "    elif {occupation=Adm-clerical,sex=Female} ([154]) then pos prob = 0.98090186\n",
-    "    elif {occupation=Prof-specialty} ([184]) then pos prob = 0.86271186\n",
-    "    elif {age=Middle-aged,education=HS-grad} ([4]) then pos prob = 0.96911197\n",
-    "    elif {education=Grad-school} ([81]) then pos prob = 0.61656442\n",
-    "    elif {age=Middle-aged,hours.per.week=Full-time} ([6]) then pos prob = 0.94713161\n",
-    "    elif {education=Bachelors,native.country=N-America} ([69]) then pos prob = 0.73352034\n",
-    "    elif {sex=Male,native.country=N-America} ([244]) then pos prob = 0.86269540\n",
+    "    If      {capital.gain=7298LessThancapital-gain} [46] then pos prob = 0.01617922\n",
+    "    elif {education=Grad-school,marital.status=Married} [76] then pos prob = 0.24616368\n",
+    "    elif {age=Young,marital.status=Never-married} [36] then pos prob = 0.99606078\n",
+    "    elif {age=Young,capital.loss=capital-lossEQ0} [34] then pos prob = 0.92338388\n",
+    "    elif {education=Bachelors,marital.status=Married} [68] then pos prob = 0.33762434\n",
+    "    elif {marital.status=Married,occupation=Exec-managerial} [123] then pos prob = 0.46758105\n",
+    "    elif {education=HS-grad,marital.status=Married} [85] then pos prob = 0.70224325\n",
+    "    elif {education=Some-college,marital.status=Married} [98] then pos prob = 0.58744545\n",
+    "    elif {relationship=Own-child,hours.per.week=Full-time} [224] then pos prob = 0.98528471\n",
+    "    elif {marital.status=Married,occupation=Prof-specialty} [124] then pos prob = 0.27289720\n",
+    "    elif {education=Assoc-degree,marital.status=Married} [59] then pos prob = 0.57581069\n",
+    "    elif {capital.loss=capital-lossEQ0,hours.per.week=Part-time} [55] then pos prob = 0.98307380\n",
+    "    elif {occupation=Other-service,capital.loss=capital-lossEQ0} [172] then pos prob = 0.97980381\n",
+    "    elif {occupation=Prof-specialty,sex=Male} [183] then pos prob = 0.73821990\n",
+    "    elif {occupation=Adm-clerical,sex=Female} [154] then pos prob = 0.98090186\n",
+    "    elif {occupation=Prof-specialty} [184] then pos prob = 0.86271186\n",
+    "    elif {age=Middle-aged,education=HS-grad} [4] then pos prob = 0.96911197\n",
+    "    elif {education=Grad-school} [81] then pos prob = 0.61656442\n",
+    "    elif {age=Middle-aged,hours.per.week=Full-time} [6] then pos prob = 0.94713161\n",
+    "    elif {education=Bachelors,native.country=N-America} [69] then pos prob = 0.73352034\n",
+    "    elif {sex=Male,native.country=N-America} [244] then pos prob = 0.86269540\n",
     "    else  (default rule)  then pos prob = 0.94477711\n",
     "\n",
     "Elaine seems to have a slightly different rule list, without a rule for `{occupation=Adm-clerical,sex=Female}`,\n",
