Some initial text for paper.  Maybe a bit pedantic!

--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -23,8 +23,8 @@
 
 \begin{frontmatter}
 
-\title{Learning decision lists with branch-and-bound}
-\runtitle{Learning decision lists with branch-and-bound}
+\title{Learning rule lists with branch-and-bound}
+\runtitle{Learning rule lists with branch-and-bound}
 
 
 \begin{abstract}
