--- a/paper/latex_macros.tex
+++ b/paper/latex_macros.tex
@@ -19,8 +19,9 @@
 \def\Normal{\mathrm{Normal}}
 \def\X{{\mathcal X}}
 \def\Y{{\mathcal Y}}
-\def\D{{\mathcal D}}
+\def\RL{{\mathcal R}}
 \def\N{{\mathcal N}}
+\def\Prefix{{\mathcal P}}
 \newcommand{\x}{\mathbf{x}}
 \newcommand{\y}{\mathbf{y}}
 
