--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -1,3 +1,17 @@
+@article{rivest:1987,
+ author = {Rivest, Ronald L.},
+ title = {Learning Decision Lists},
+ journal = {Machine Learnning},
+ issue_date = {November 1987},
+ volume = {2},
+ number = {3},
+ month = nov,
+ year = {1987},
+ pages = {229--246},
+ publisher = {Kluwer Academic Publishers},
+ address = {Hingham, MA, USA}
+}
+
 @article{LethamRuMcMa15,
     author    = "Benjamin Letham and Cynthia Rudin and Tyler H. McCormick and David Madigan",
     title     = {Interpretable classifiers using rules and {B}ayesian analysis: {B}uilding a better stroke prediction model},
