--- a/paper/content.tex
+++ b/paper/content.tex
@@ -83,9 +83,9 @@ m(\RL) = m(\Prefix) + m(d),
 \end{align}
 corresponding to mistakes made by the prefix and default rule, respectively.
 %
-Eliminating the latter error term gives a lower bound on the objective,
+Eliminating the latter error term gives a lower bound~$b(\Prefix)$ on the objective,
 \begin{align}
-\ell(\RL) \ge m(\Prefix) + c k \equiv b(\Prefix),
+b(\Prefix) \equiv m(\Prefix) + c k \le \ell(\RL),
 \end{align}
 which is actually a lower bound on the objective of \emph{any} rule list
 of length~$k$ or longer whose prefix starts with~$\Prefix$.
