Couple follow-up notes from Cynthia (show example rule lists)
They are interpretable!
Similarly optimal rule lists are different?

--- a/paper/content.tex
+++ b/paper/content.tex
@@ -146,6 +146,8 @@ This is precisely the structure required and exploited by branch-and-bound.
 
 \item Some characterization of the number of solutions close to optimal (plot number of suboptimal solutions vs amount of suboptimality, removing permutations)
 
+\item Some example rule lists to show how interpretable they are. Potentially we could display equally optimal rule lists that look very different from each other. 
+
 \end{itemize}
 
 \section{Conclusions}
